--- a/Unidad7_RuidoEstadio/servidor/package.json
+++ b/Unidad7_RuidoEstadio/servidor/package.json
@@ -9,5 +9,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
